# geode-bindings-to-ida-script

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  geode-bindings-to-ida-script.ilk
.github/workflows/: build.yml  cmake-single-platform.yml
res/: RCa04612  a.rc  ico.rc
src/: geode-bindings-to-ida-script.cpp
